# ArtWork-PROJECT

./: .gitignore  README.md  main.py  pyproject.toml
WEBDEV/server/: generate_embeddings.py  server.py
server/: server.py
